[package]
name = "rusty-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.1.0"
rayon = "1.5.2"
simple-process-stats = "1.0.0"

ciborium = "0.2.0"
serde = "1.0.136"

dashmap = "5.2.0"

thiserror = "1.0.30"
